syntax = "proto3";

option csharp_namespace = "grpcServerStreamingClient";

package ServerStreaming;

service ServerStreaming {
  rpc SendMessage (MessageRequest) returns (stream MessageResponse);
}

message MessageRequest {
  string name = 1;
  string message = 2;
}

message MessageResponse {
  string message = 1;
}
